package it.unibo.tuprolog.core.impl

import it.unibo.tuprolog.core.Term

internal abstract class TermImpl : Term
